[project]
name = "hdxms-dataset-builder-backend"
version = "0.1.0"
description = "Backend API for HDX-MS Dataset Builder"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "narwhals>=1.0.0",
    "polars>=1.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0", "pytest-asyncio>=0.24.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
